<resources>
    <string name="encourage">Let it go!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter Name</string>
    <string name="btn_hit">HIT ME</string>
    <string name="btn_sm">little hit</string>
    <string name="btn_lg">BIG HIT</string>
    <string name="hits_msg">#hits:</string>
    <string name="title_activity_hits">HitsActivity</string>
    <string name="context_prefs">CONTEXT_PREFS</string>
    <string name="app_name">Time Zone Converter</string>
    <string name="currzone_label">Current Time Zone</string>
    <string name="currzone_location">America/New_York</string>
    <string name="currzone_time">GMT -05:00</string>
    <string name="homezone_label">Home Time Zone</string>
    <string name="homezone_location">America/Los_Angeles</string>
    <string name="homezone_time">GMT -08:00</string>
    <string name="ori_time_label">Original Time</string>
    <string name="ori_time">11:24 AM</string>
    <string name="con_time_label">Converted Time</string>
    <string name="con_time">8:24 AM</string>
    <string name="convert_button">convert</string>
    <string name="setting_label">setting</string>
    <string-array name="spinner_options">
        <item>America/New_York</item>
        <item>America/Los_Angeles</item>
        <item>Europe/Berlin</item>
        <item>Europe/Istanbul</item>
        <item>Asia/Singapore</item>
        <item>Asia/Tokyo</item>
        <item>Australia/Canberra</item>
        <item>Asia/Shanghai</item>
    </string-array>
</resources>